unpackaged/main/default/objects/Survey_Followup__c/Survey_Followup__c.object-meta.xml
<CustomObject>
    <description>Recording of the discussion with the survey respondent.</description>
    <label>Survey Followup</label>
    <nameField>
        <label>Short Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Followup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>