unpackaged/main/default/objects/Survey_Followup__c/fields/Customer_Discussion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Discussion_Notes__c</fullName>
    <label>Customer Discussion Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>