unpackaged/main/default/objects/Survey_Followup__c/fields/Customer_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiment__c</fullName>
    <label>Customer Sentiment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>