unpackaged/main/default/objects/Survey_Followup__c/fields/Mitigation_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_of_Issue__c</fullName>
    <label>Mitigation of Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>