unpackaged/main/default/objects/Survey_Followup__c/fields/Sentiment_Category__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Category__c</fullName>
    <label>Sentiment Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Response</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Incorrect Resolution</fullName>
            </value>
            <value>
                <fullName>Case Closed Before Resolution</fullName>
            </value>
            <value>
                <fullName>Insufficient Information in Resolution</fullName>
            </value>
            <value>
                <fullName>Unhappy with Solution Provided</fullName>
            </value>
            <value>
                <fullName>Development / Product Issue</fullName>
            </value>
            <value>
                <fullName>Auto Close</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>