unpackaged/main/default/objects/Survey_Followup__c/fields/Survey_Responses__c.field-meta.xml
<CustomField>
    <fullName>Survey_Responses__c</fullName>
    <label>Survey Responses</label>
    <referenceTo>GetFeedback_Survey_Responses__c</referenceTo>
    <relationshipLabel>Survey Followup</relationshipLabel>
    <relationshipName>Survey_Followup</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>